# 6.semestr

./: README.md
SBP/: Prezentace SBP Hradílek.pptx  SBP - Prezentace Hradílek.pptx  co v prezentaci.txt
Státnice/: Postup státnice.txt
Státnice/Opakování/C/: CMakeLists.txt  main.c
Státnice/Opakování/C/2hod/: 2hod.c  2hod.h
Státnice/Opakování/C/3hod/: 3hod.c  3hod.h
Státnice/Opakování/Java/Statnice/src/: BubbleSort.java  CocktailSort.java  HeapSort.java  Main.java
Státnice/Opakování/Python/: 1_otazka.py  byte.py  errors.py  file.txt  fileopening.py  moduly.py
Státnice/Opakování/Python/TODO_List/: Task.py  TaskManager.py  mainLoop.py
Státnice/Opakování/Python/knihovna/: matematika.py
Státnice/Otázky/C/: Vyhody_a_nevyhody_zarazeni.tex  chyby.aux  chyby.tex
Státnice/Otázky/Python/: chyby.aux  chyby.tex  dataTypes.aux  dataTypes.tex  modules.aux  modules.out  modules.tex  otázky.txt  vyrazy.aux  vyrazy.tex
Státnice/Otázky/WEB/: index.html  style.css
Státnice/Otázky/WEBA/: otázky ze skripta.txt
Státnice/Otázky/ZPP/: PaK.tex
Státnice/Postup státnice/: postup.tex
